# YinshML

./: .gitignore  .gitmodules  ANALYSIS_SUMMARY_100K_GAMES.md  ARCHITECTURAL_IMPROVEMENTS_PLAN.md  AUTONOMOUS_CLOUD_WORKFLOW.md  BATCHED_EVALUATOR_DESIGN.md  BITBOARD_FOLLOWUP_PLAN.md  BITBOARD_PORT_PROMPT.md  BOOTSTRAP_FAILURE_ANALYSIS.md  CLASSIFICATION_VALUE_HEAD_RESULTS.md  CLAUDE.md  CLOUD_RERUN_RUNBOOK.md  CLOUD_RUN_V1_POSTMORTEM.md  CLOUD_TRAINING_PLAN.md  D2_PREP.md  ERIC_JANG_AUTOGO_AUDIT.md  EXPERIMENT_BACKLOG.md  EXPERIMENT_RESULTS_24H.md  GPU_SCALING_PLAN.md  GPU_SCALING_RESULTS.md  HUNT_STATUS.md  IMPLEMENTATION_PLAN.md  INVESTIGATION_PLAN.md  INVESTIGATION_RESULTS.md  META_OBJECTIVE_BEAT_ITER1.md  MODEL_PLAY_OBSERVATIONS.md  NEXT_UP.md  OVERNIGHT_RESULTS.md  PHASE_1_5_TEST_RESULTS.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  POST_BITBOARD_TRAINING_BRIEF.md  PURE_NEURAL_MODE_TEST_RESULTS.md  QUICK_START_GUIDE.md  README_TRAINING_DASHBOARD.md  REMOTE_TRAINING_INVESTIGATION.md  RESEARCH_LOG.md  ROADMAP_TO_ALPHAZERO.md  SESSION_2026-05-21_RECAP.md  STEP2_MCTS400_RUNBOOK.md  SYMMETRY_FIXES_RUNBOOK.md  (+30 more)
analysis/: adjustment_data_analyzer.py  analyze_iteration_tournament.py  analyzer_config.yaml  detailed_matchup_table.html  global_tournament_manager.py  iteration_performance.csv  matchup_stats.csv  metrics_analyzer.py  tournament_viz.py  training_analyzer.py
analysis_board/: BACKLOG.md  README.md  _smoke.py  bga_import.py  screenshot_import.py  server.py
analysis_output/: heuristic_evaluator_model.pkl
architecture-atlas/: README.md  _base.html  index.html  (+1 more)
(+873 files in other folders)
