[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yinsh_ml"
version = "0.1.0"
description = "ML training infrastructure for YINSH game"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]